# KWDLC_NER

./: .gitignore  README.md  convert.py  memo.md  pyproject.toml
