[tool.poetry]
name = "kwdlc_ner"
version = "0.1.0"
description = ""
authors = ["HelloRusk <hellorusk1998@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
datasets = "^1.11.0"
flake8 = "^3.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
